[package]
name = "agentdash-application-operation-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentdash-diagnostics = { workspace = true }
agentdash-domain = { workspace = true }
agentdash-spi = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
