[package]
name = "agentdash-application-runtime-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentdash-agent-types = { workspace = true }
agentdash-application-ports = { workspace = true }
agentdash-domain = { workspace = true }
agentdash-diagnostics = { workspace = true }
agentdash-spi = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { workspace = true }

[dev-dependencies]
agentdash-test-support = { workspace = true }
tokio = { workspace = true }
