[package]
name = "agentdash-application-runtime-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentdash-agent-protocol = { workspace = true }
agentdash-agent-types = { workspace = true }
agentdash-application-ports = { workspace = true }
agentdash-domain = { workspace = true }
agentdash-relay = { workspace = true }
agentdash-spi = { workspace = true }
async-trait = "0.1"
base64 = "0.22"
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
agentdash-diagnostics = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
agentdash-test-support = { workspace = true }
json-patch = "2.0"
tokio-stream = { version = "0.1", features = ["sync"] }
