[package]
name = "agentdash-application-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentdash-application-ports = { workspace = true }
agentdash-domain = { workspace = true }
agentdash-spi = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
agentdash-diagnostics = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
agentdash-agent-runtime-contract = { workspace = true }
agentdash-test-support = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
