[package]
name = "agentdash-application"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentdash-agent-types = { workspace = true }
agentdash-domain = { workspace = true }
agentdash-spi = { workspace = true }
agentdash-injection = { workspace = true }
agent-client-protocol = { workspace = true }
agentdash-acp-meta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
futures = { workspace = true }
async-trait = "0.1"
regex = "1"
tokio-util = { version = "0.7", features = ["rt"] }
rhai = { workspace = true }
base64 = "0.22"
json-patch = "2.0"
globset = "0.4"
serde_yaml = "0.9"
sha2 = "0.10"
cron = "0.15"

[dev-dependencies]
tempfile = "3.18"
tokio-stream = { version = "0.1", features = ["sync"] }
json-patch = "2.0"
agentdash-agent = { workspace = true }
agentdash-executor = { workspace = true, features = ["pi-agent"] }
