[package]
name = "agentdash-application"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentdash-agent-runtime = { workspace = true }
agentdash-agent-runtime-contract.workspace = true
agentdash-agent-service-api = { workspace = true }
agentdash-agent-types = { workspace = true }
agentdash-application-agentrun = { workspace = true }
agentdash-application-lifecycle = { workspace = true }
agentdash-application-ports = { workspace = true }
agentdash-application-extension-gateway = { workspace = true }
agentdash-application-skill = { workspace = true }
agentdash-application-vfs = { workspace = true }
agentdash-application-workflow = { workspace = true }
agentdash-application-shared-library = { workspace = true }
agentdash-workspace-module = { workspace = true }
agentdash-contracts = { workspace = true }
agentdash-domain = { workspace = true }
agentdash-relay = { workspace = true }
agentdash-platform-spi = { workspace = true }
walkdir = "2.5"
agentdash-agent-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
agentdash-diagnostics = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
futures = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
shell-words = { workspace = true }
tokio-util = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
json-patch = { workspace = true }
globset = { workspace = true }
lru = "0.12"
serde_yaml = "0.9"
sha2 = { workspace = true }
tar = { workspace = true }
cron = "0.15"
chrono-tz = "0.10"
tera = "1"
url = "2"

[dev-dependencies]
tempfile = { workspace = true }
tokio-stream = { workspace = true }
json-patch = { workspace = true }
agentdash-infrastructure = { workspace = true }
agentdash-test-support = { workspace = true }
agentdash-agent-runtime-test-support = { workspace = true }
sqlx = { workspace = true }
