[package]
name = "agentdash-connector-contract"
description = "AgentDash 连接器合同层：AgentConnector trait、执行上下文与 Hook DTO"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentdash-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
async-trait = "0.1"
agent-client-protocol = { workspace = true }
executors = { workspace = true }
json-patch = "2.0"

[dev-dependencies]
tokio = { workspace = true }
