[package]
name = "agentdash-coordinator"
description = "AgentDash 中控层 — 多后端连接管理、视图配置与用户偏好"
version.workspace = true
edition.workspace = true

[dependencies]
agentdash-state = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
